# TCEQ_TAMIS_reader

./: .gitignore  LICENSE  README.md  geotam_processor_copy.py  practice_import.py  pyproject.toml
.github/workflows/: python-package-conda.yml
docs/: additional_resources.md  index.html  pydoc_docs.md  search.js
docs/TCEQ_geotam_reader/src/: tceq_geotam_processor.html
resources/: reference_table_information.md
src/: extra_geotam_processors.py  extra_processors.py  extra_tamis_processors.py  geotam_processor.py  polars_test.py  prac_compare.csv  practice_import.py  tceq_geotam_processor.py  tceq_tamis_processor.py  test_processor.py
src/ref_files/: tceq_parameters.csv  tceq_parameters.txt  tceq_site_locations.csv  tceq_site_locations.txt  tceq_units.csv  tceq_units.txt
tests/: 2023_kc_autogc_w_ws_wd.csv  2023_kc_autogc_w_ws_wd.gzip  2025_kc_autogc_w_ws_wd_comma.csv  2025_kc_autogc_w_ws_wd_comma.txt  2025_kc_autogc_w_ws_wd_tab.csv  october_2023_resultant_wind_speed_from_tceq_for_comparison.csv  readme.txt  test_processor.py
tests/test_data/: 202503_kc_autogc_formatted_tceq_ethane.txt  2025_kc_autogc_w_ws_wd_pipe.txt  2025_kc_autogc_w_ws_wd_tab.txt  october_2023_ethane_ppbv_from_tceq_for_comparison.csv  october_2023_resultant_wind_direction_from_tceq_for_comparison.csv
